<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:paddingTop="10dp"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input"
        android:layout_gravity="center_horizontal"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice1"
        android:id="@+id/checkBox1" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice2"
        android:id="@+id/checkBox2" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice3"
        android:id="@+id/checkBox3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/main_button"
        android:text="@string/press"
        android:layout_gravity="center_horizontal"
         />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gloss"
            android:id="@+id/radio1"
            android:checked="false"
            android:onClick="radioHandler"
        />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flat"
            android:id="@+id/radio2"
            android:checked="false"
            android:onClick="radioHandler"
            />
    </RadioGroup>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:id="@+id/toggleButton"
        android:layout_gravity="right"
        android:checked="false" />

</LinearLayout>
